Update Some Responsive Design

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,7 +16,7 @@
     }
 
     .leftSideImage {
-        text-align: left;
+        text-align: center;
     }
     .FooterBeforeMDScrn{
         display: none;
